--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,3 +23,92 @@ theme:
     toggle:
       icon: material/toggle-switch
       name: Switch to light mode
+
+# Extensions
+markdown_extensions:
+  - footnotes
+  - nl2br
+  - attr_list
+  - sane_lists
+  - meta
+  - smarty
+  - tables
+  - mdx_breakless_lists
+  - def_list
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.details
+  - pymdownx.magiclink
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
+  - pymdownx.highlight:
+      use_pygments: true
+      anchor_linenums: true
+  - pymdownx.tasklist:
+       custom_checkbox: true
+  - pymdownx.emoji:
+      emoji_index: !!python/name:materialx.emoji.twemoji
+      emoji_generator: !!python/name:materialx.emoji.to_svg
+  - admonition
+  - toc:
+      permalink: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:mermaid2.fence_mermaid
+plugins:
+  - search  # search bar
+  - ezlinks:
+        wikilinks: true  # support [[WikiLinks]] used in e.g. Obsidian
+  - mermaid2  # interpret mermaid graphs
+#  - awesome-pages  # simplifies configuring page titles and their order
+  - embed_file:
+      callouts: true
+      custom-attributes: 'assets/css/custom_attributes.css'
+  - callouts
+  - git-revision-date-localized:
+        type: date
+        fallback_to_build_date: true
+        locale: en
+  - encryptcontent:
+      title_prefix: '🔐'
+      password_button: True
+      password_button_text: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="1em" width="1em"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M416 32h-64c-17.67 0-32 14.33-32 32s14.33 32 32 32h64c17.67 0 32 14.33 32 32v256c0 17.67-14.33 32-32 32h-64c-17.67 0-32 14.33-32 32s14.33 32 32 32h64c53.02 0 96-42.98 96-96V128C512 74.98 469 32 416 32zM342.6 233.4l-128-128c-12.51-12.51-32.76-12.49-45.25 0c-12.5 12.5-12.5 32.75 0 45.25L242.8 224H32C14.31 224 0 238.3 0 256s14.31 32 32 32h210.8l-73.38 73.38c-12.5 12.5-12.5 32.75 0 45.25s32.75 12.5 45.25 0l128-128C355.1 266.1 355.1 245.9 342.6 233.4z"/></svg>'
+  - custom-attributes:
+      file: 'assets/css/custom_attributes.css'
+  - meta-descriptions  # generate meta descriptions for your pages using the first paragraph of each page
+#hooks:
+#  - overrides/hooks/on_page_markdown.py
+#  - overrides/hooks/on_env.py
+#extra_javascript:
+#  - assets/js/mathjax.js
+#  - assets/js/utils.js
+#  - https://polyfill.io/v3/polyfill.min.js?features=es6
+#  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+#  - assets/js/tooltipster.bundle.js
+#extra_css:
+#    - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
+#    - assets/css/template/blog.css
+#    - assets/css/template/grid.css
+#    - assets/css/template/img-grids-float.css
+#    - assets/css/template/tooltipster.bundle.min.css
+#    - assets/css/template/utils.css
+#    - assets/css/admonition.css
+#    - assets/css/custom_attributes.css
+#    - assets/css/customization.css
+#extra:
+#  generator: false
+#  SEO: assets/meta/SEO.png
+#  blog_list:
+#    pagination: true
+#    pagination_message: true
+#    pagination_translation: 'posts in'
+#  hooks:
+#    strip_comments: true
+#    fix_heading: true
