--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: My Docs
 edit_uri: https://github.com/hannesdelbeke/notes/  # says this is default automatically set if pointing to github URL, test this.
 
 theme:
+  highlightjs: true
   icon:
     edit: material/pencil
   name: material
@@ -40,9 +41,9 @@ markdown_extensions:
   - def_list # create definition lists (standard)
   - pymdownx.arithmatex:
       generic: true
-  - pymdownx.details
-  - pymdownx.magiclink
-  - pymdownx.critic
+  - pymdownx.details  # creates collapsible elements with <details><summary>
+  - pymdownx.magiclink  # autolink URLs and emails
+  - pymdownx.critic  # allow comments in markdown, see https://facelessuser.github.io/pymdown-extensions/extensions/critic/
   - pymdownx.caret
   - pymdownx.keys
   - pymdownx.mark
@@ -55,8 +56,8 @@ markdown_extensions:
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
-  - admonition
-  - toc:
+  - admonition  # adds rST-style admonitions (standard), great for warnings
+  - toc:  # table of content
       permalink: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
@@ -71,24 +72,24 @@ plugins:
         wikilinks: true  # support [[WikiLinks]] used in e.g. Obsidian
   - mermaid2  # interpret mermaid graphs
 #  - awesome-pages  # simplifies configuring page titles and their order
-  - embed_file:
+  - embed_file:  # embed files such as pdfs, e.g. ![[filename]]
       callouts: true
       custom-attributes: 'assets/css/custom_attributes.css'
-  - callouts
-  - git-revision-date-localized:
+  - callouts  # converts Obsidian style callouts to mkdocs supported 'admonitions
+  - git-revision-date-localized:  # display "last updated: DATE" at bottom of page, based on git
         type: date
         fallback_to_build_date: true
         locale: en
-  - encryptcontent:
-      title_prefix: '🔐'
-      password_button: True
-      password_button_text: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="1em" width="1em"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M416 32h-64c-17.67 0-32 14.33-32 32s14.33 32 32 32h64c17.67 0 32 14.33 32 32v256c0 17.67-14.33 32-32 32h-64c-17.67 0-32 14.33-32 32s14.33 32 32 32h64c53.02 0 96-42.98 96-96V128C512 74.98 469 32 416 32zM342.6 233.4l-128-128c-12.51-12.51-32.76-12.49-45.25 0c-12.5 12.5-12.5 32.75 0 45.25L242.8 224H32C14.31 224 0 238.3 0 256s14.31 32 32 32h210.8l-73.38 73.38c-12.5 12.5-12.5 32.75 0 45.25s32.75 12.5 45.25 0l128-128C355.1 266.1 355.1 245.9 342.6 233.4z"/></svg>'
+#  - encryptcontent:
+#      title_prefix: '🔐'
+#      password_button: True
+#      password_button_text: '<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="1em" width="1em"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M416 32h-64c-17.67 0-32 14.33-32 32s14.33 32 32 32h64c17.67 0 32 14.33 32 32v256c0 17.67-14.33 32-32 32h-64c-17.67 0-32 14.33-32 32s14.33 32 32 32h64c53.02 0 96-42.98 96-96V128C512 74.98 469 32 416 32zM342.6 233.4l-128-128c-12.51-12.51-32.76-12.49-45.25 0c-12.5 12.5-12.5 32.75 0 45.25L242.8 224H32C14.31 224 0 238.3 0 256s14.31 32 32 32h210.8l-73.38 73.38c-12.5 12.5-12.5 32.75 0 45.25s32.75 12.5 45.25 0l128-128C355.1 266.1 355.1 245.9 342.6 233.4z"/></svg>'
   - custom-attributes:
       file: 'assets/css/custom_attributes.css'
   - meta-descriptions  # generate meta descriptions for your pages using the first paragraph of each page
-#hooks:
-#  - overrides/hooks/on_page_markdown.py
-#  - overrides/hooks/on_env.py
+hooks:
+  - overrides/hooks/on_page_markdown.py
+#  - overrides/hooks/on_env.py  # create obsidian graph
 extra_javascript:
   - assets/js/mathjax.js
   - assets/js/utils.js
