--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,28 +91,28 @@ hooks:
   - overrides/hooks/on_page_markdown.py
 #  - overrides/hooks/on_env.py  # create obsidian graph
 extra_javascript:
-  - assets/js/mathjax.js
+  - assets/js/mathjax.js  # mathematical LaTeX support (standard)
   - assets/js/utils.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
-  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js  # more LaTeX support
   - assets/js/tooltipster.bundle.js
 extra_css:
     - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
     - assets/css/template/blog.css
     - assets/css/template/grid.css
-    - assets/css/template/img-grids-float.css
+#    - assets/css/template/img-grids-float.css # errors "GET /assets/css/template/img-grids-float.css HTTP/1.1" code 404
     - assets/css/template/tooltipster.bundle.min.css
     - assets/css/template/utils.css
     - assets/css/admonition.css
     - assets/css/custom_attributes.css
     - assets/css/customization.css
-extra:
-  generator: false
-  SEO: assets/meta/SEO.png
-  blog_list:
-    pagination: true
-    pagination_message: true
-    pagination_translation: 'posts in'
+extra:  # data passed to templates
+  generator: false  # if True, displays Made with Material for MkDocs at bottom of page
+#  SEO: assets/meta/SEO.png
+#  blog_list:
+#    pagination: true
+#    pagination_message: true
+#    pagination_translation: 'posts in'
   hooks:
     strip_comments: true
     fix_heading: true
