--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -92,10 +92,10 @@ hooks:
 #  - overrides/hooks/on_env.py  # create obsidian graph
 extra_javascript:
   - assets/js/mathjax.js  # mathematical LaTeX support (standard)
-  - assets/js/utils.js
-  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - assets/js/utils.js # this seems to be obsidian graph code
+  - https://polyfill.io/v3/polyfill.min.js?features=es6  # support older browsers? A js polyfill library for es6 API such as findIndex, Array.from, etc.
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js  # more LaTeX support
-  - assets/js/tooltipster.bundle.js
+#  - assets/js/tooltipster.bundle.js  # todo this doesnt work yet?
 extra_css:
     - https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css
     - assets/css/template/blog.css
