--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: My Docs
-edit_uri: https://github.com/hannesdelbeke/wiki  # says this is default automatically set if pointing to github URL, test this.
+edit_uri: https://github.com/hannesdelbeke/wiki/docs  # root folder containing the notes on main branch
 
 theme:
   highlightjs: true
