more tags testing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,6 +68,8 @@ markdown_extensions:
           format: !!python/name:mermaid2.fence_mermaid
 plugins:
   - search  # search bar
+  - tags: # hashtags support (material theme)
+      tags_file: folder1/tags.md
   - ezlinks:
         wikilinks: true  # support [[WikiLinks]] used in e.g. Obsidian
   - mermaid2  # interpret mermaid graphs
