--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -21,10 +21,11 @@ jobs:
   copy-images:
     runs-on: ubuntu-latest
     steps:
-      - name: prepare input
-        # All steps after this one will have env variable `GHA_BRANCH` passed to them.
-        run:   echo ::set-env name=GHA_BRANCH::$(echo $GITHUB_REF | awk -F / '{print $3}')
-        shell: bash
+      # - name: prepare input
+      #   # All steps after this one will have env variable `GHA_BRANCH` passed to them.
+      #   run:   echo ::set-env name=GHA_BRANCH::$(echo $GITHUB_REF | awk -F / '{print $3}')
+      #   shell: bash
+      #   # see https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#environment-files
           
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
