--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -47,7 +47,7 @@ jobs:
           dst_path: /static/images/
           dst_branch: mkdocs
           clean: true  # empty dst_path before copying
-          # commit_message: "Images copied from main to documentation branch!"
+          commit_message: "Images copied from main to documentation branch!"
 
   copy-sections:
     runs-on: ubuntu-latest
@@ -59,13 +59,13 @@ jobs:
         with:
           personal_token: ${{ secrets.GITHUB_TOKEN  }}
           src_branch: main
-          src_path: /sections/.
+          src_path: /notes/.
           dst_owner: hannesdelbeke
           dst_repo_name: ${{ github.event.repository.name }}
           dst_path: /docs/
           dst_branch: mkdocs
           clean: true  # empty dst_path before copying
-          # commit_message: "Sections copied from main to documentation branch!"
+          commit_message: "Sections copied from main to documentation branch!"
           
 # copy-readme:
 #   runs-on: ubuntu-latest
