--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -17,20 +17,19 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-env:
-  GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
+# env:
+#   GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
+
 jobs:
   copy-images:
     runs-on: ubuntu-latest
     steps:
-      # - name: prepare input
-      #   # All steps after this one will have env variable `GHA_BRANCH` passed to them.
-      #   run:   echo ::set-env name=GHA_BRANCH::$(echo $GITHUB_REF | awk -F / '{print $3}')
-      #   shell: bash
-      #   # see https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#environment-files
           
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - run: |
+             echo ${{ github.event.repository.name }}
+             echo ${{ secrets.GITHUB_TOKEN  }}
 
       # TODO run janitor on markdown input
       
@@ -56,6 +55,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - run: |
+             echo ${{ github.event.repository.name }}
+             echo ${{ secrets.GITHUB_TOKEN  }}
       - name: Copy Markdowns
         uses: andstor/copycat-action@v3.2.4
         with:
