--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -74,14 +74,15 @@ jobs:
           clean: true  # empty dst_path before copying
           commit_message: "Sections copied from main to documentation branch!"
       
-      # commit all files in the folder dst_repo_dir
+      # browse to repo folder & commit all files
       - name: Commit copy to target branch
         run: |
-          git status
-          echo '==='
           cd dst_repo_dir
-          echo '==='
-          git status
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git -m "copy notes and images"
+          git push
           
 # copy-readme:
 #   runs-on: ubuntu-latest
