--- a/.github/workflows/copy-to-documentation-branch.yml
+++ b/.github/workflows/copy-to-documentation-branch.yml
@@ -17,6 +17,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# set GITHUB_TOKEN access
+permissions:
+  contents: write
+
 env:
   GITHUB_TOKEN: '${{secrets.GITHUB_TOKEN}}'
 
