--- a/.github/workflows/build-and-deploy-gh-pages.yml
+++ b/.github/workflows/build-and-deploy-gh-pages.yml
@@ -2,8 +2,7 @@ name: ci
 on:
   push:
     branches:
-      - master
-      - main
+      - mkdocs
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,7 +12,4 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install --requirement requirements.txt
-#      - run: pip install mkdocs-material==5.5.12
-#      - run: pip install mkdocs-exclude
-#      - run: pip install mkdocs-roamlinks-plugin
       - run: mkdocs gh-deploy --force
