--- a/.github/workflows/build-and-deploy-gh-pages.yml
+++ b/.github/workflows/build-and-deploy-gh-pages.yml
@@ -12,4 +12,25 @@ jobs:
         with:
           python-version: 3.x
       - run: pip install --requirement requirements.txt
+
+      # run janitor on markdown input to create backlinks
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - uses: actions/checkout@v2
+        with:
+          repository: 'hannesdelbeke/note-link-janitor'  # use fork to support subfolders
+          ref: stable
+          path: 'note-link-janitor'
+      - name: install yarn in janitor workspace
+        run: |
+            cd ${{ github.workspace }}/note-link-janitor
+            yarn install
+            yarn run build
+      - name: create backlinks with Janitor
+        run: ${{ github.workspace }}/note-link-janitor/dist/index.js ${{ github.workspace }}/docs
+      - name: Remove Janitor folder
+        run: rm --force -r note-link-janitor
+      
+      # build & deploy site
       - run: mkdocs gh-deploy --force
