update commit message to show ACTION 🤖⚡

--- a/.github/workflows/build-and-deploy-gh-pages.yml
+++ b/.github/workflows/build-and-deploy-gh-pages.yml
@@ -33,4 +33,4 @@ jobs:
         run: rm --force -r note-link-janitor
       
       # build & deploy site
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy --force --message "GITHUB ACTION 🤖⚡ deploy site, mkdocs v{version} "
